# RPTU_SCVP

./: .gitignore  README.md  traces.vcd
SCVP.Exercise2/: CMakeLists.txt  exor.h  exor_main.cpp  nand.h  nand_main.cpp  stim.h
SCVP.Exercise2/output/: exercise2_exor  exercise2_nand
SCVP.Exercise3/: CMakeLists.txt  state_machine.h
SCVP.Exercise3/output/: exercise3  exercise3_v2  tracesT4.vcd
SCVP.Exercise4/: CMakeLists.txt  main.cpp  place.h  subnet.h  transition.h
SCVP.Exercise4/output/: exercise4  exercise4_v2  exercise4_v3  exercise4_v4  exercise4_v5
SCVP.Exercise5/: kpn.cpp  kpn.h  main.cpp
SCVP.Exercise5/output/: exercise5
SCVP.Exercise6/: processor.h
SCVP.Exercise6/output/: TASK3_results.txt  exercise6_TASK1  exercise6_TASK2  exercise6_TASK3
SCVP.artifacts/fifo_example/: CMakeLists.txt
